--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,26 @@
-/* You can add global styles to this file, and also import other style files */
+// TAILWIND
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+// SCROLLBAR
+@media screen and (min-width: 768px) {
+  ::-webkit-scrollbar {
+    width: 1rem;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    height: 4rem;
+    border: 0.25rem solid transparent;
+    border-radius: 0.5rem;
+    background-clip: content-box;
+    background-color: #6d666640;
+    &:hover {
+      background-color: #6d66666c;
+    }
+  }
+  ::-webkit-scrollbar-track {
+    border-radius: 0.25rem;
+    background-color: #cbcdcd59;
+  }
+}
