--- a/src/app/pages/core/tracking/tracking.component.html
+++ b/src/app/pages/core/tracking/tracking.component.html
@@ -1,8 +1,3 @@
-<article class="mb-4 flex flex-col sm:flex-row justify-between sm:items-center gap-2">
-  <h1 class="text-3xl text-gray-800 font-semibold whitespace-nowrap text-ellipsis overflow-hidden">
-    Rastreo de usuarios
-  </h1>
-</article>
 <div class="flex flex-col lg:grid lg:grid-cols-[400px_1fr] gap-4">
   <!-- TRACKING CARD -->
   <article class="p-3 md:p-6 bg-white border border-gray-200 rounded-lg shadow">
@@ -48,7 +43,7 @@
           </p>
           <p class="text-gray-600 font-medium mb-4">{{ statistic.registerDate | date:'d \'de\' MMMM \'del\' y - hh:mm:ss a' }}</p>
           <hr class="mb-4"/>
-          <div class="mb-4 flex items-center gap-3">
+          <div class="flex items-center gap-3" [class.mb-4]="serviceType === 'GENERAL'">
             <span class="flex justify-center items-center w-8 h-8 p-2 rounded-full text-green-600 bg-green-100 border border-green-300">
               <svg class="w-6 h-6" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 20">
                 <path d="M8 0a7.992 7.992 0 0 0-6.583 12.535 1 1 0 0 0 .12.183l.12.146c.112.145.227.285.326.4l5.245 6.374a1 1 0 0 0 1.545-.003l5.092-6.205c.206-.222.4-.455.578-.7l.127-.155a.934.934 0 0 0 .122-.192A8.001 8.001 0 0 0 8 0Zm0 11a3 3 0 1 1 0-6 3 3 0 0 1 0 6Z"/>
@@ -61,12 +56,13 @@
               </p>
             </span>
           </div>
-          <hr class="mb-4"/>
-          <div class="flex items-center gap-4">
+          <hr class="mb-4" *ngIf="serviceType === 'GENERAL'"/>
+          <div class="flex items-center gap-4" *ngIf="serviceType === 'GENERAL'">
             <img
-              class="w-10 h-10 rounded-full"
-              src="https://images.unsplash.com/photo-1535713875002-d1d0cf377fde?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=880&q=80"
+              class="w-10 h-10 rounded-full object-cover"
+              [src]="baseAPI + '/users/photo/' + statistic.userDNI + '.jpg'"
               [alt]="statistic.user.name + ' ' + statistic.user.lastName"
+              appOnErrorImage
             />
             <span>
               <small class="block text-gray-400">Usuario</small>
@@ -105,7 +101,6 @@
   </article>
   <!-- MAP CARD -->
 </div>
-
 
 <!-- TEMPLATE SECTION -->
 <ng-template #emptySearchTemplate>
