--- a/src/app/pages/errors/errors.component.html
+++ b/src/app/pages/errors/errors.component.html
@@ -1,1 +1,18 @@
-<p>errors works!</p>
+<section class="sh-backdrop">
+  <p class="text-center font-bold text-8xl text-gray-800">404</p>
+</section>
+<p class="text-center font-semibold text-3xl text-gray-600 mb-2">
+  Parece que estás perdido
+</p>
+<p class="text-center text-xl text-gray-600 mb-8">
+  ¡La página que buscas no está disponible!
+</p>
+<div class="flex justify-center">
+  <button
+    class="text-white bg-indigo-500 hover:bg-indigo-600 focus:ring-2 focus:outline-none focus:ring-indigo-300 font-medium rounded-lg px-7 py-2 transition-colors duration-300"
+    type="button"
+    routerLink="/"
+  >
+    Ir al inicio
+  </button>
+</div>
